# qtip

./: .gitignore  README.md  pyproject.toml
src/qtip/: cli.py
