[project]
name = "qtip"
version = "0.1.0"
description = "clean and normalize voice audio in audio and video files"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "clearvoice>=0.1.2",
]

[project.scripts]
qtip = "qtip.cli:main"

[build-system]
requires = ["uv_build>=0.11.31,<0.12.0"]
build-backend = "uv_build"
